--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "car-store-server",
+  "name": "nutribox-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier . --write",
     "format:fix": "npx prettier --write src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "postinstall": "npm install zod"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "shurjopay": "^0.12.1",
     "ts-node-dev": "^2.0.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
